# rostel_ex1

./: .gitignore  README.md  config.py  data_processing.py  email_sender.py  main.py  page_selectors.py  parser.py  pyproject.toml
