[project]
name = "exercise-1"
version = "0.1.0"
description = ""
authors = [
    {name = "sergejlapin",email = "sergey.l37@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "cssselect (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
